--- a/codeforces_1100/.vscode/settings.json
+++ b/codeforces_1100/.vscode/settings.json
@@ -1,8 +1,4 @@
 {
-  "files.associations": {
-    "iostream": "cpp",
-    "ostream": "cpp"
-  },
   "C_Cpp_Runner.cCompilerPath": "gcc",
   "C_Cpp_Runner.cppCompilerPath": "g++",
   "C_Cpp_Runner.debuggerPath": "gdb",
@@ -59,5 +55,8 @@
   "C_Cpp_Runner.useLeakSanitizer": false,
   "C_Cpp_Runner.showCompilationTime": false,
   "C_Cpp_Runner.useLinkTimeOptimization": false,
-  "C_Cpp_Runner.msvcSecureNoWarnings": false
+  "C_Cpp_Runner.msvcSecureNoWarnings": false,
+  "files.associations": {
+    "ostream": "cpp"
+  }
 }
